--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "discord.js": "^12.5.3",
-    "dotenv": "^9.0.0"
+    "dotenv": "^9.0.0",
+    "puppeteer": "^9.1.1"
   }
 }
