--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "homepage": "https://github.com/vdkuipb/albion#readme",
   "devDependencies": {
     "@types/node": "^15.0.2",
+    "@types/node-fetch": "^2.5.10",
     "typescript": "^4.2.4"
   },
   "dependencies": {
     "discord.js": "^12.5.3",
     "dotenv": "^9.0.0",
+    "node-fetch": "^2.6.1",
     "puppeteer": "^9.1.1"
   }
 }
